1. Added table field. 2. Fixed input field alignment 3. Fixed Text alignment

--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,88 @@
 .container {
     width: 100%; 
     max-width: 400px; 
-    height: 100%;
     padding: 20px;
-    border-radius: 10px;
-    align-items: center;
-    text-align: center;
+    border-radius: 20px; 
     background-color: darksalmon;
-    vertical-align: middle;
-    border-radius: 20px;
+    text-align: center;
+    margin: 20px;
+  
 }
 .desc-input-field {
-    width: 50%;
-    height: 100px;
+    width: 85%;
+    height: 300px;
     
 }
 .input-field {
-    width: 50%;
+    width: 85%;
 }
 .date-input-field {
-    width: 24.5%;
+    width: 75%;
 }
 .date-input-container {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     
 }
+.date-label-one{
+    flex: 1;
+    text-align: center;
+}
+.date-label-two{
+    flex: 1;
+    text-align: center;
+
+}
+
+
+.table-container{
+    width: 100%;
+    max-width: 1500px;
+    padding: 50px;
+    background-color: darksalmon;
+    border-radius: 20px;
+    margin: 20px;
+    margin-right: 30px;
+
+}
+
+
+
+table {
+    width: 70%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    color: #000000;
+}
+
+table th, table td {
+    border: 1px solid #1b1b1b;
+    padding: 5px;
+    text-align: left;
+}
+
+.data-table{
+    width: 100%; 
+        border-collapse: collapse; 
+}
+.data-table th, .data-table td {
+    border: 1px solid #000000;
+    padding: 8px;
+    text-align: left;
+}
+
 
 
 body{
     width: 100%;
+    height: 100%;
     align-items: center; 
     text-align: center;
+    background-color: rgb(251, 229, 209);
+}
+.nothing{
+    display: flex;
+    flex-direction: row;
 }
